src/objects/Mogli_SMS__AsyncTaskManager__c.object
<CustomObject>
    <fields>
        <fullName>Mogli_SMS__Alt_Params_2__c</fullName>
        <description>Replaces the Alt_Params field with new longer field length</description>
        <label>Alt_Params_2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Alt_Params__c</fullName>
        <description>secondary source of task&apos;s params</description>
        <label>Alt Params</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Error__c</fullName>
        <description>Error(s) resulting from associated task</description>
        <label>Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__GatewayId__c</fullName>
        <label>Gateway Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Params__c</fullName>
        <description>primary source of task&apos;s params</description>
        <label>Params</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Priority__c</fullName>
        <label>Priority</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Status__c</fullName>
        <label>Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Task_Type__c</fullName>
        <description>name of async task</description>
        <label>Task Type</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Async Task</label>
    <listViews>
        <fullName>Mogli_SMS__All</fullName>
        <columns>NAME</columns>
        <columns>Mogli_SMS__Task_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Async Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Async Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>